<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    tools:context=".ui.view.FormFragment">

    <LinearLayout
        android:id="@+id/lay_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/lay_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/edit_insurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:textStyle="bold"
                android:textColor="#E56717"
                android:text="@string/h_insurance"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/edit_Offer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:autofillHints=""
                android:text="@string/h_offer"
                android:textSize="22dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/lay_offer"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="@dimen/option_margin"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edit_car"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/option_margin"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/h_car"
                    android:inputType="numberDecimal"
                    android:tag="car_number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:paddingTop="@dimen/option_margin">

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:hint="@string/h_name"
                    android:inputType="textNoSuggestions"
                    android:tag="name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/editDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_weight="1"
                    android:backgroundTint="#EC9A59"
                    android:autofillHints=""
                    android:cursorVisible="false"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:focusable="false"
                    android:hint="@string/h_dob"
                    android:inputType="date"
                    android:tag="@string/h_dob" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:autofillHints=""
                    android:ems="10"
                    android:maxLength="10"
                    android:background="@android:color/transparent"
                    android:hint="@string/h_phone"
                    android:inputType="phone"
                    android:tag="phone"
                    android:textAlignment="viewStart" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/h_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_marginBottom="@dimen/option_margin"
                android:layout_weight="1"
                android:ems="10"
                android:paddingLeft="4sp"
                android:paddingRight="4sp"
                android:text="@string/t_gender"
                android:textAppearance="@style/TextAppearance.Design.Counter"
                android:textColor="?android:attr/textColorHint" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/text_margin">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_weight="1"
                    android:buttonTint="#3090C7"
                    android:tag="sex_male"
                    android:text="@string/t_male" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="sex_female"
                    android:buttonTint="#3090C7"
                    android:text="@string/t_female" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_marginBottom="@dimen/option_margin"
                android:layout_weight="1"
                android:ems="10"
                android:paddingLeft="4sp"
                android:paddingRight="4sp"
                android:text="@string/t_check"
                android:textAppearance="@style/TextAppearance.Design.Counter"
                android:textColor="?android:attr/textColorHint" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/text_margin">

                <CheckBox
                    android:id="@+id/check_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:tag="work"
                    android:buttonTint="#3090C7"
                    android:text="@string/c_work" />

                <CheckBox
                    android:id="@+id/check_smoke"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:tag="smoke"
                    android:buttonTint="#3090C7"
                    android:text="@string/c_smoke" />

                <CheckBox
                    android:id="@+id/check_gym"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:tag="workout"
                    android:buttonTint="#3090C7"
                    android:text="@string/c_gym" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#F36060"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lay_main"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Error Message" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnQuote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="12dp"
                android:insetTop="0dp"
                android:backgroundTint="#E56717"
                android:insetBottom="0dp"
                android:letterSpacing="0"
                android:text="View free quotes"
                android:textSize="14dp"
                android:textAllCaps="false"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:backgroundTint="#171B17"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lay_main" />

           <!-- <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="MissingConstraints">-->

                <TextView
                    android:id="@+id/h_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:text="@string/h_instruction"
                    android:textSize="12dp"
                    app:layout_constraintTop_toBottomOf="@id/btnQuote" />
<!--            </com.google.android.material.textfield.TextInputLayout>-->
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>