<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/signInFragment">

    <!--<fragment
        android:id="@+id/homeFragment"
        android:name="com.capg.insurance.ui.authentication.HomeFragment"
        android:label=""
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_ProductFragment"
            app:destination="@id/ProductFragment" />
    </fragment>-->
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.capg.insurance.ui.authentication.SignInFragment"
        android:label="HSBC Insurance">
        <action
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:enterAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/signInFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_signInFragment_to_ProductFragment"
            app:destination="@id/ProductFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/signInFragment"
            app:popUpToInclusive="true"/>
        <!--<action
            android:id="@+id/action_signInFragment_to_resetPasswordFragment"
            app:destination="@id/resetPasswordFragment" />-->

    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.capg.insurance.ui.authentication.SignUpFragment"
        android:label="sign up">
        <action
            android:id="@+id/action_signUpFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:enterAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/signUpFragment"
            app:popUpToInclusive="true" />
        <!--<action
            android:id="@+id/action_signUpFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/signUpFragment"
            app:popUpToInclusive="true" />-->
    </fragment>
    <!--<fragment
        android:id="@+id/resetPasswordFragment"
        android:name="com.capg.insurance.ui.authentication.ResetPasswordFragment"
        android:label="ResetPasswordFragment" >
        <action
            android:id="@+id/action_resetPasswordFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/resetPasswordFragment"
            app:popUpToInclusive="true" />
    </fragment>-->

    <fragment
        android:id="@+id/ProductFragment"
        android:name="com.capg.insurance.ui.view.ProductFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_product">

        <action
            android:id="@+id/action_HomeFragment_to_NewFormFragment"
            app:destination="@id/NewFormFragment" />
    </fragment>
    <fragment
        android:id="@+id/NewFormFragment"
        android:name="com.capg.insurance.ui.view.FormFragment"
        android:label="@string/new_fragment_label"
        tools:layout="@layout/fragment_new">

        <action
            android:id="@+id/action_NewFormFragment_to_ListFragment"
            app:destination="@id/ListFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListFragment"
        android:name="com.capg.insurance.ui.view.QuoteFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_new">
    </fragment>
</navigation>